added better pagination, filters and platwrite for tests
